# fast-paste

./: Cargo.toml  README.md  tray.rc
src/: core.rs  error.rs  main.rs  simulate.rs  tray.rs
